Fix issue of loading old mega menu page on mobile

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenuteaser/_megaMenuTeaser.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenuteaser/_megaMenuTeaser.scss
@@ -6,7 +6,7 @@
         margin-top: -$margin-xl;
     }
     @media #{$mobile} {
-        margin-bottom: $margin-md;
+        margin-bottom: $margin-zero;
     }
 
     height: calc(100% + 32px);
